# knext

./: .gitignore  LICENSE  README.rst  pyproject.toml
KNeXT/: get_kgml.py
KNeXT/KNeXT/: KNeXTm.py  converter.py
KNeXT/tests/data/: hsa00232.tsv
knext/: KNeXT.py  get_kgml.py
notebooks/: KGML_processing.ipynb  test.ipynb
src/: __main__.py  main.py
src/knext/: call.py  convert.py  genes.py  mixed.py  utils.py
src/parser/: expand_to_cpd_prot_relation.py  parser_expand.py  remove_unique_suffix.py
tests/: test_get_kgml.py  test_graph.py
tests/data/: hsa00232.xml  hsa00232_graphics.txt
