[tool.poetry]
name = "knext"
version = "1.2"
description = "Kyoto Encylopedia of Genes and Genomes Markup Language File parser and converter"
authors = ["Everest Uriel Castaneda <everest_castaneda1@baylor.edu>"]
readme = "README.rst"
license = "LICENSE"
packages = [{include = "knext", from = "src"}]

[tool.poetry.scripts]
knext = "src.__main__:cli"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.1"
click = "^8.1.3"
pandas = "^2.0.2"
typer = "^0.9.0"
requests = "^2.31.0"
pytest = "^7.3.2"
pathlib = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/everest-castaneda/knext"
"Bug Tracker" = "https://github.com/everest-castaneda/knext/issues"
